--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Hola Mundo</h1>
+    <h2>hELLO WOLRD</h2>
+    <h3>Encabezado 3</h3>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
