--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Hola Mundo</h1>
     <h2>hELLO WOLRD</h2>
     <h3>Encabezado 3</h3>
+    <h4>Encabezado 4</h4>
+    <h5>Encabezado 5</h5>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
