--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>Encabezado 3</h3>
     <h4>Encabezado 4</h4>
     <h5>Encabezado 5</h5>
+    <h6>Encabezado h6 agregado</h6>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
