borrando main.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="toolbar">
-      <i class="fa fa-file-text-o"> </i>
+      <i class="fa fa-file-text-o" id="doc-icon"> </i>
       <hr size="1" style="margin-right: 6px;">
     </div>
 
