--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button id="btnAtras">
       <i class="fa fa-arrow-left"></i>
     </button>
-    <div id="ContainerSUP">{QOLQA} | Conceptual model of: </div>
+    <div id="ContainerSUP">{QOLQA} | Logical model of: </div>
     
     <div  id="toolbar1" class="btn-toolbar" role="toolbar">
       <div class="btn-group">
