actualizar datos automaticamente

--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
           <button type="button" class="fa fa-print"></button>
       </div>
     </div>
-
+    <table style="position:relative;width: 100% ; margin: auto;">
+      <tr>
+        <td valign="top">
+          <div id="properties"
+            style="display:none;border: solid 1px black; padding: 10px;position: absolute; right:0;top: 50px">
+          </div>
+        </td>
+      </tr>
+    </table>
     <script type="module" src="./src/toolbar.js"></script>
   </body>
 </html>
