de json a mxgraph: falta completar las relaciones

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div id="view1">
       <h1>Primera Vista</h1>
-      <a href="./model.html?id=345">Modelo 1</a>
-      <a href="./model.html?id=234">Modelo 2</a>
-      <a href="./model.html?id=123">Modelo 3</a>
+      <div>
+        <ul id="linkModels"></ul>
+      </div>
     </div>
     <div id="app"></div>
     <script type="module" src="./src/main.js"></script>
