arreglar problemas con el  await

--- a/model.html
+++ b/model.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./src/styles/output.css" />
     <title>Model</title>
 </head>
+
 <body>
     <div id="view2" class="p-4 space-y-4">
         <div class="flex flex-row items-center justify-between">
@@ -41,7 +43,7 @@
                 <button id="saveButton" class="fa fa-print"></button>
             </div>
         </div>
-        
+
         <div class="grid grid-cols-12 gap-2">
             <div class="flex flex-col justify-center h-full col-span-1">
                 <div id="toolbar"></div>
@@ -57,7 +59,8 @@
                 <i class="fa fa-arrow-left"></i>
             </button>
         </a> -->
-        <script type="module" src="../src/toolbar.js"></script>
+        <script type="module" src="./src/toolbar.js"></script>
     </div>
 </body>
+
 </html>
