Mensaje descriptivo del commit

--- a/model.html
+++ b/model.html
@@ -15,7 +15,7 @@
             <div class="flex flex-row items-center gap-2 p-1 border border-black border-solid rounded-md">
                 <h1>{QOLQA}</h1>
                 <div class="flex flex-col">
-                    <p>Conceptual model of: Name</p>
+                    <p id="nameModel">Conceptual model of: Name</p>
                     <p>Last save 25/03/2023 at 13:24</p>
                 </div>
             </div>
@@ -26,6 +26,23 @@
 
         <div class="flex flex-row items-center gap-2">
             <div class="flex flex-row gap-2 p-1 border border-black border-solid rounded-md">
+
+<!--     
+        <div id="container"></div>
+    
+        <button id="importButton">IMPORT</button>
+        <button id="querieButton">QUERIES</button>
+        <button id="saveButton">SAVE</button>
+        <a href="/">
+            <button id="btnAtras">
+                <i class="fa fa-arrow-left"></i>
+            </button>
+        </a>
+        <div id="ContainerSUP"></div>
+    
+        <div id="toolbar1" class="btn-toolbar" role="toolbar">
+            <div class="btn-group"> -->
+
                 <button type="button"> <i class="fa fa-undo"></i></button>
                 <button type="button"> <i class="fa fa-repeat"></i></button>
             </div>
