--- a/model.html
+++ b/model.html
@@ -68,7 +68,7 @@
             <div
                 class="relative m-4 w-1/3 rounded-lg bg-white font-sans text-base font-light leading-relaxed text-blue-gray-500 antialiased shadow-2xl">
                 <div
-                    class="flex shrink-0 items-center p-4 font-sans text-2xl font-semibold leading-snug text-blue-gray-900 antialiased justify-center">
+                    class="flex shrink-0 items-center p-4 font-sans text-2xl font-semibold leading-snug text-blue-gray-900 antialiased justify-center textDialog">
                     Are you sure you want to delete this table?
                 </div>
                 <div class="flex shrink-0 flex-wrap items-center justify-end p-4 text-blue-gray-500">
