--- a/model.html
+++ b/model.html
@@ -118,8 +118,13 @@
                         </div>
                     </div>
                 
-                    <div class="grid grid-cols-12 gap-2">
-                        <div id="container" class="col-span-8"></div>
+                    <div class="relative grid grid-cols-12 gap-2">
+                        <div id="outlineContainer"
+                            class="z-10 absolute overflow-hidden top-0 right-0 w-[160px] h-[120px] bg-transparent border border-solid border-lime-50">
+                        </div>
+                        <div id="container" class="col-span-8 overflow-hidden">
+                            
+                        </div>
                         <div class="flex flex-col col-span-3">
                             <div id="properties" class="hidden"></div>
                             <div class="grow-[1] flex flex-col gap-2">
@@ -136,6 +141,7 @@
     </div>
     <script type="module" src="/src/toolbar.js"></script>
     <script type="module" src="/src/features/queries.js"></script>
+    <script type="module" src="/src/features/outline_navigator.js"></script>
 </body>
 
 </html>
