--- a/model.html
+++ b/model.html
@@ -13,7 +13,7 @@
     <form id="choose-collections">
 
     </form>
-    <div class="relative">
+    <div>
         <div id="query-popup" class="absolute top-0 bottom-0 left-0 right-0 z-10 hidden bg-red-500 bg-opacity-50">
             <div id="stepper" class="relative">
                 <div class="absolute top-0 right-0">
@@ -85,7 +85,7 @@
         </div>
 
 
-        <div id="view2" class="p-4 space-y-4">
+        <div id="view2" class="p-4 space-y-4 min-h-screen flex flex-col">
             <div class="flex flex-row items-center justify-between">
                 <div class="flex flex-row items-center gap-2">
                     <div>
@@ -101,7 +101,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-row">
+            <div class="flex flex-row grow-[1]">
                 <div class="flex flex-col gap-4">
                     <img src="/assets/icons/edit-icon.svg" alt="Edit icon" />
                     <img id="open-popup-button" src="/assets/icons/query-icon.svg" alt="Query icon" />
@@ -118,12 +118,15 @@
                         </div>
                     </div>
                 
-                    <div class="relative grid grid-cols-12 gap-2">
+                    <div class="relative grid grid-cols-12 gap-2 h-full">
                         <div id="outlineContainer"
                             class="z-10 absolute overflow-hidden top-0 right-0 w-[160px] h-[120px] bg-transparent border border-solid border-lime-50">
                         </div>
-                        <div id="container" class="col-span-8 overflow-hidden">
-                            
+                        <div id="container" class="col-span-8 overflow-hidden"></div>
+                        <div id="zoomContainer" class="absolute bottom-8 right-8">
+                            <button id="zoomInButton">+</button>
+                            <input type="range" id="zoomSlider" min="0.1" max="3" value="1" step="0.1" />
+                            <button id="zoomOutButton">-</button>
                         </div>
                         <div class="flex flex-col col-span-3">
                             <div id="properties" class="hidden"></div>
@@ -142,6 +145,7 @@
     <script type="module" src="/src/toolbar.js"></script>
     <script type="module" src="/src/features/queries.js"></script>
     <script type="module" src="/src/features/outline_navigator.js"></script>
+    <script type="module" src="/src/features/zoom_slider.js"></script>
 </body>
 
 </html>
