funcionalidad de teclado para eliminar relaciones referenciales. Faltan corregir algunas excepciones

--- a/model.html
+++ b/model.html
@@ -146,6 +146,7 @@
     <script type="module" src="/src/features/queries.js"></script>
     <script type="module" src="/src/features/outline_navigator.js"></script>
     <script type="module" src="/src/features/zoom_slider.js"></script>
+    <script type="module" src="/src/features/keyboard.js"></script>
 </body>
 
 </html>
