importando desde el archivo model.html un unico javascript src/index.js

--- a/model.html
+++ b/model.html
@@ -122,11 +122,7 @@
             </div>
         </div>
     </div>
-    <script type="module" src="/src/toolbar.js"></script>
-    <script type="module" src="/src/features/queries.js"></script>
-    <script type="module" src="/src/features/outline_navigator.js"></script>
-    <script type="module" src="/src/features/zoom_slider.js"></script>
-    <script type="module" src="/src/features/keyboard.js"></script>
+    <script type="module" src="/src/index.js"></script>
 </body>
 
 </html>
