--- a/model.html
+++ b/model.html
@@ -123,14 +123,14 @@
                         </button>
                     </div>
                     <div class="h-full w-auto" id="navbar-sections">
-                        <div class="hidden bg-red-400 h-full md:w-[400px] w-[calc(100vw - 80px)]" id="query-section">
-
+                        <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="query-section">
+                            <h3>Query Section</h3>
                         </div>
-                        <div class="hidden bg-green-400 h-full md:w-[400px] w-[calc(100vw - 80px)]" id="edit-section">
-
+                        <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="edit-section">
+                            <h3>Edit Section</h3>
                         </div>
-                        <div class="hidden bg-blue-400 h-full md:w-[400px] w-[calc(100vw - 80px)]" id="stats-section">
-
+                        <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="stats-section">
+                            <h3>Stats Section</h3>
                         </div>
                     </div>
 
