--- a/model.html
+++ b/model.html
@@ -2,176 +2,110 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./src/styles/output.css" />
-    <title>Model</title>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./src/styles/output.css" />
+  <title>Model</title>
 </head>
 
 <body>
-    <form id="choose-collections">
-
-    </form>
-    <div>
-        <div id="query-popup" class="absolute top-0 bottom-0 left-0 right-0 z-10 hidden bg-red-500 bg-opacity-50">
-            <div id="stepper" class="relative">
-                <div class="absolute top-0 right-0">
-                    <button id="close-popup-button" type="button">Close</button>
-                </div>
-                <div>
-                    <form id="step-one-form" class="block px-8 pt-6 pb-8 mb-4 bg-white rounded shadow-md">
-                        <div class="mb-4">
-                            <label class="block mb-2 text-sm font-bold text-gray-700" for="query">
-                                Consulta
-                            </label>
-                            <textarea
-                                class="w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                id="query" name="query" placeholder="Escribe tu consulta" type="text" cols="50"
-                                rows="5"></textarea>
-                        </div>
-                        <div class='flex flex-row gap-2'>
-                            <button id="cancel-button"
-                                class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700 focus:outline-none focus:shadow-outline"
-                                type="button">
-                                Cancelar
-                            </button>
-                            <button
-                                class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline"
-                                type="submit">
-                                Siguiente
-                            </button>
-                        </div>
-                    </form>
-                    <div id="step-two-container" class="hidden px-8 pt-6 pb-8 mb-4 bg-white rounded shadow-md">
-                        <h1>Escoge tus colecciones</h1>
-                        <div id="words-buttons" class="flex flex-row gap-2 flex-wrap mb-4 w-[20ch]"></div>
-                        <form id="step-two-form" class='flex flex-row gap-2'>
-                            <input type="hidden" id="selected-words" name="selectedWords" />
-                            <button id="back-button"
-                                class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700 focus:outline-none focus:shadow-outline"
-                                type="button">
-                                Atras
-                            </button>
-                            <button
-                                class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline"
-                                type="submit">
-                                Siguiente
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+  <div class="flex flex-col h-screen w-screen bg-blue-300">
+    <header class="bg-blue-200 h-[80px] flex justify-between items-center px-8">
+      <div class="flex flex-row items-center gap-2">
+        <div>
+          <img src="/assets/icons/back_to_models_icon.svg" />
         </div>
-
-
-        <div id="view2" class="py-4 space-y-4 min-h-screen flex flex-col">
-            <div class="flex flex-row items-center justify-between">
-                <div class="flex flex-row items-center gap-2">
-                    <div>
-                        <img src="/assets/icons/back_to_models_icon.svg" />
-                    </div>
-                    <div class="flex flex-col">
-                        <p id="nameModel"></p>
-                        <p>Last save 25/03/2023 at 13:24</p>
-                    </div>
-                </div>
-                <div>
-                    Icon user
-                </div>
-            </div>
-
-            <div class="flex flex-row h-full">
-                <aside class="flex items-center text-red-500 w-uuto mt-7">
-                    <div class="flex flex-col items-center z-30 bg-black h-full w-[80px] gap-4 shadow">
-
-                        <button class="h-[80px] bg-white w-full flex items-center justify-center" id="buttonQuerys">
-                            <svg class="w-7" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M6 9H30" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M6 18H30" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M6 27H16.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M27 21V27H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M21 21H27V27" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                        </button>
-                        <button class="h-[80px] bg-white w-full flex items-center justify-center" id="buttonEdit">
-                            <svg fill="none" class="w-7" viewBox="0 0 36 36">
-                                <path d="M19 30H31.5" stroke="currentColor" stroke-width="2" />
-                                <path
-                                    d="M25.75 5.24997C25.3467 4.65324 26.1561 4.31799 27 4.31799C27.8439 4.31799 28.6533 4.65324 29.25 5.24997C29.8467 5.8467 30.1819 6.65604 30.1819 7.49997C30.1819 8.3439 29.8467 9.15324 29.25 9.74997L10.5 28.5H4.5V22.5L24.75 5.24997Z"
-                                    stroke="currentColor" stroke-width="3" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                        </button>
-                        <button class="h-[80px] bg-white w-full flex items-center justify-center" id="buttonStats">
-                            <svg class="w-7" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M4.5 4.5V31.5H31.5" stroke="currentColor" stroke-width="2"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                                <path d="M27 13.5V31.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M19.5 19.5V31.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M12 25.5V31.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                        </button>
-                    </div>
-                    <div class="h-full w-auto" id="navbar-sections">
-                        <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="query-section">
-                            <h3>Query Section</h3>
-                        </div>
-                        <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="edit-section">
-                            <h3>Edit Section</h3>
-                        </div>
-                        <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="stats-section">
-                            <h3>Stats Section</h3>
-                        </div>
-                    </div>
-
-                </aside>
-
-                <div class="grow-[1]">
-                    <div class="flex flex-row items-center gap-2">
-                        <div class="flex flex-row gap-2 p-1 border border-black border-solid rounded-md">
-                            <!-- <button id="open-popup-button">QUERIES</button> -->
-                            <button id="saveButton" class="fa fa-print"></button>
-                        </div>
-                        <div class="flex flex-col justify-center h-full col-span-1">
-                            <div id="toolbar"></div>
-                        </div>
-                    </div>
-
-                    <div class="relative grid grid-cols-12 gap-2 h-full">
-                        <div id="outlineContainer"
-                            class="z-10 absolute overflow-hidden top-0 right-0 w-[160px] h-[120px] bg-transparent border border-solid border-lime-50">
-                        </div>
-                        <div id="container" class="col-span-8 overflow-hidden"></div>
-                        <div id="zoomContainer" class="absolute bottom-8 right-8">
-                            <button id="zoomInButton">+</button>
-                            <input type="range" id="zoomSlider" min="0.1" max="3" value="1" step="0.1" />
-                            <button id="zoomOutButton">-</button>
-                        </div>
-                        <div class="flex flex-col col-span-3">
-                            <div id="properties" class="hidden"></div>
-                            <div class="grow-[1] flex flex-col gap-2">
-                                <div>
-                                    <h1>Tus consultas</h1>
-                                    <div id="query-list"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="flex flex-col">
+          <p id="nameModel"></p>
+          <p>Last save 25/03/2023 at 13:24</p>
         </div>
-    </div>
-    <script type="module" src="/src/index.js"></script>
+      </div>
+      <div>
+        Icon user
+      </div>
+
+    </header>
+
+    <main class="bg-white h-full flex">
+      <aside class="bg-red-600 w-[80px] flex flex-col items-center gap-4">
+        <div class="flex flex-col items-center z-30 h-full w-[80px] gap-4 shadow">
+          <button class="h-[80px] bg-white w-full flex items-center justify-center" id="buttonQuerys">
+            <svg class="w-7" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6 9H30" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M6 18H30" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M6 27H16.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M27 21V27H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M21 21H27V27" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </button>
+          <button class="h-[80px] bg-white w-full flex items-center justify-center" id="buttonEdit">
+            <svg fill="none" class="w-7" viewBox="0 0 36 36">
+              <path d="M19 30H31.5" stroke="currentColor" stroke-width="2" />
+              <path
+                d="M25.75 5.24997C25.3467 4.65324 26.1561 4.31799 27 4.31799C27.8439 4.31799 28.6533 4.65324 29.25 5.24997C29.8467 5.8467 30.1819 6.65604 30.1819 7.49997C30.1819 8.3439 29.8467 9.15324 29.25 9.74997L10.5 28.5H4.5V22.5L24.75 5.24997Z"
+                stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </button>
+          <button class="h-[80px] bg-white w-full flex items-center justify-center" id="buttonStats">
+            <svg class="w-7" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4.5 4.5V31.5H31.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M27 13.5V31.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M19.5 19.5V31.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M12 25.5V31.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </button>
+        </div>
+        <div class="h-full w-auto hidden" id="navbar-sections">
+          <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="query-section">
+            <h3>Query Section</h3>
+          </div>
+          <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="edit-section">
+            <h3>Edit Section</h3>
+          </div>
+          <div class="hidden bg-white h-full md:w-[400px] w-[calc(100vw - 80px)]" id="stats-section">
+            <h3>Stats Section</h3>
+          </div>
+        </div>
+      </aside>
+      <div class="h-full w-full">
+        <div class="w-full h-[60px] flex gap-4">
+          <button id="saveButton" class="fa fa-print w-[40px] text-[20px]"></button>
+        </div>
+        <div class="w-full text-black relative h-[calc(100%-60px)] w-full">
+          <div id="container" class="bg-blue-300 absolute w-full h-full z-10 overflow-auto">
+          </div>
+          <div class="absolute left-[calc(100vw_-_410px)] top-[50px] flex flex-col z-30">
+            <div class="border w-[300px] h-[200px] mb-[40px]" id="outlineContainer"></div>
+            <div class="border w-[300px] h-[200px] ">metricas</div>
+          </div>
+
+          <div class="absolute border w-[20px] h-[20px] left-[30px] bottom-[60px] z-50">
+            <div id="toolbar" class="items-center flex"></div>
+          </div>
+
+          <div class="absolute right-[56px] bottom-[40px] z-30 w-auto h-auto mb-4">
+            <div id="zoomContainer">
+              <button id="zoomInButton">+</button>
+              <input type="range" id="zoomSlider" min="0.1" max="3" value="1" step="0.1" />
+              <button id="zoomOutButton">-</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </main>
+  </div>
+  <script type="module" src="/src/index.js"></script>
 </body>
 
 </html>
