agregando seccion de consultas en el html

--- a/model.html
+++ b/model.html
@@ -68,6 +68,10 @@
         <div class="h-full w-auto" id="navbar-sections">
           <div class="hidden bg-white h-full md:w-[300px] w-[calc(100vw - 80px)] mx-10 my-15" id="query-section">
             <h3>Query Section</h3>
+            <div>
+                <h1>Tus consultas</h1>
+                <div id="query-list"></div>
+            </div>
           </div>
           <div class="hidden bg-white h-full md:w-[300px] w-[calc(100vw - 80px)] mx-10 my-15" id="edit-section">
             <h3>Edit Section</h3>
