--- a/public/model.html
+++ b/public/model.html
@@ -69,6 +69,9 @@
           <div id="content-completitud">
 
           </div>
+          <div id="content-pattern-access"></div>
+          <div id="content-cost-navigation"></div>
+          <div id="content-redundance"></div>
         </div>
       </div>
 
