--- a/public/model.html
+++ b/public/model.html
@@ -156,7 +156,6 @@
     </div>
   </div>
 
-  <div id="background-add-property">
-    Mi contenido
+  <div id="background-add-property" class="absolute top-0 bottom-0 left-0 right-0 z-20 hidden bg-red-500 bg-opacity-50 justify-center items-center">
   </div>
 </div>
