las metricas se muestran en graficos

--- a/public/model.html
+++ b/public/model.html
@@ -65,13 +65,8 @@
         </div>
         <div class="hidden bg-white h-full md:w-[300px] w-[calc(100vw - 80px)] mx-10 my-15" id="stats-section">
           <h3>Stats Section</h3>
-          <div class="border-2 border-black w-[300px] h-[200px] ">metricas</div>
-          <div id="content-completitud">
-
-          </div>
-          <div id="content-pattern-access"></div>
-          <div id="content-cost-navigation"></div>
-          <div id="content-redundance"></div>
+          <canvas class="border-2 border-black w-[300px] h-[200px] mb-2" id="query-metrics-chart"></canvas>
+          <canvas class="border-2 border-black w-[300px] h-[200px] " id="struc-metrics-chart"></canvas>
         </div>
       </div>
 
